syntax = "proto3";

package ibc.applications.interchain_swap.v1;

option go_package = "github.com/sideprotocol/ibcswap/v6/modules/apps/101-interchain-swap/types";

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

// Type defines a classification of swap messages
enum SwapMessageType {
  option (gogoproto.goproto_enum_prefix) = false;

  // Default zero value enumeration
  TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "UNSPECIFIED"];

  TYPE_MAKE_POOL = 1 [(gogoproto.enumvalue_customname) = "MAKE_POOL"];
  TYPE_TAKE_POOL = 2 [(gogoproto.enumvalue_customname) = "TAKE_POOL"];
  TYPE_SINGLE_DEPOSIT = 3 [(gogoproto.enumvalue_customname) = "SINGLE_DEPOSIT"];
  TYPE_MAKE_MULTI_DEPOSIT = 4 [(gogoproto.enumvalue_customname) = "MAKE_MULTI_DEPOSIT"];
  TYPE_TAKE_MULTI_DEPOSIT = 5 [(gogoproto.enumvalue_customname) = "TAKE_MULTI_DEPOSIT"];
  TYPE_MULTI_WITHDRAW = 7 [(gogoproto.enumvalue_customname) = "MULTI_WITHDRAW"];
  TYPE_LEFT_SWAP = 8 [(gogoproto.enumvalue_customname) = "LEFT_SWAP"];
  TYPE_RIGHT_SWAP = 9 [(gogoproto.enumvalue_customname) = "RIGHT_SWAP"];
}

message StateChange {
  repeated cosmos.base.v1beta1.Coin in = 1;
  repeated cosmos.base.v1beta1.Coin out = 2;
  repeated cosmos.base.v1beta1.Coin poolTokens = 3;
  string poolId = 4;
  string mutiDepositOrderId = 5;
  string sourceChainId = 6;
}


// IBCSwapPacketData is comprised of a raw transaction, type of transaction and optional memo field.
message IBCSwapPacketData {
  SwapMessageType   type = 1;
  // marshall data of transactions
  bytes  data = 2;
  // current pool states on source chain, could be empty.
  bytes  stateChange = 3;
}


